# lucidsoup.github.io

./: CNAME  DrumSeek  README.md  admin.html  content.json  drumseek.html  index.html  items.json
soupmix/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
soupmix/cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Version.cmake
soupmix/docs/: architecture.md  build.md  mapping-spec.md  node-spec.md  project-format.md
soupmix/include/soupmix/app/: CommandLine.hpp  EditorApp.hpp  ShowApp.hpp
soupmix/include/soupmix/control/: AudioClock.hpp  MacroBank.hpp  MidiLearn.hpp  MidiManager.hpp  OscServer.hpp
soupmix/include/soupmix/core/: App.hpp  Config.hpp  Result.hpp  ServiceLocator.hpp  Time.hpp  Types.hpp  UUID.hpp
soupmix/include/soupmix/debug/: Assertions.hpp  GpuTimer.hpp  Log.hpp  Profiler.hpp
soupmix/include/soupmix/graph/: Graph.hpp  GraphCompiler.hpp  GraphExecutor.hpp  Link.hpp  Node.hpp  NodeRegistry.hpp  Parameter.hpp  Pin.hpp  RenderRecorder.hpp  Value.hpp
soupmix/include/soupmix/io/: ImageLoader.hpp  Recorder.hpp  Screenshot.hpp  VideoDecoder.hpp
soupmix/include/soupmix/mapping/: BlendMask.hpp  Calibration.hpp  GridSurface.hpp  OutputLayout.hpp  Projector.hpp  QuadSurface.hpp  Surface.hpp
soupmix/include/soupmix/nodes/: FxNodes.hpp  MappingNodes.hpp  OutputNodes.hpp  SourceNodes.hpp  UtilityNodes.hpp
soupmix/include/soupmix/platform/: FileSystem.hpp  Input.hpp  Paths.hpp  Window.hpp
soupmix/shaders/common/: color_utils.glsl  fullscreen_quad.vert  noise.glsl
soupmix/shaders/debug/: grid.frag  uv.frag
soupmix/shaders/fx/: blur.frag  chroma.frag  displace.frag  feedback.frag  kaleido.frag  levels.frag  transform.frag
soupmix/shaders/mapping/: mask.frag  output_quad.vert  softedge.frag
soupmix/shaders/sources/: checker.frag  fractal_julia.frag  fractal_mandelbrot.frag  sacred_geometry.frag  solid_color.frag
soupmix/src/: CMakeLists.txt  main.cpp
soupmix/src/app/: CMakeLists.txt  CommandLine.cpp  EditorApp.cpp  ShowApp.cpp
soupmix/src/control/: AudioClock.cpp  CMakeLists.txt  MacroBank.cpp  MidiLearn.cpp  MidiManager.cpp  OscServer.cpp
soupmix/src/core/: App.cpp  CMakeLists.txt  Time.cpp  UUID.cpp
soupmix/src/debug/: Assertions.cpp  CMakeLists.txt  GpuTimer.cpp  Log.cpp  Profiler.cpp
soupmix/src/graph/: CMakeLists.txt  Graph.cpp  GraphCompiler.cpp  GraphExecutor.cpp  NodeRegistry.cpp  Value.cpp
soupmix/src/io/: CMakeLists.txt  ImageLoader.cpp  Recorder.cpp  Screenshot.cpp  VideoDecoder.cpp
soupmix/src/mapping/: CMakeLists.txt  Calibration.cpp  GridSurface.cpp  Projector.cpp  QuadSurface.cpp
soupmix/src/nodes/: CMakeLists.txt
soupmix/src/platform/: CMakeLists.txt  FileSystem.cpp  Paths.cpp  Window.cpp
soupmix/src/project/: AssetRegistry.cpp  CMakeLists.txt  Project.cpp  ProjectLoader.cpp  ProjectSaver.cpp
soupmix/src/render/: CMakeLists.txt  Framebuffer.cpp  GLContext.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  UniformBuffer.cpp
soupmix/src/ui/: AssetBrowserUI.cpp  CMakeLists.txt  DockspaceUI.cpp  EditorUI.cpp  GraphEditorUI.cpp  InspectorUI.cpp  MappingUI.cpp  PerformanceUI.cpp  PreviewUI.cpp  Theme.cpp
soupmix/tests/: CMakeLists.txt
soupmix/tests/graph/: GraphCompileTests.cpp  GraphCycleTests.cpp  NodeRegistryTests.cpp
soupmix/tests/mapping/: SurfaceSerializationTests.cpp
soupmix/tests/project/: ProjectLoadTests.cpp  ProjectSaveTests.cpp
soupmix/tools/: CMakeLists.txt
soupmix/tools/offline_render/: CMakeLists.txt  main.cpp
soupmix/tools/project_inspector/: CMakeLists.txt  main.cpp
soupmix/tools/shaderlint/: CMakeLists.txt  main.cpp
(+38 files in other folders)
